# app/usercenter/cmd/api/internal/handler/user/wx_mini_auth_handler.go
@@ -1,34 +1,0 @@
-package user
-
-import (
-	"net/http"
-
-	"Luckify/common/response"
-	"github.com/go-playground/validator/v10"
-
-	"Luckify/app/usercenter/cmd/api/internal/logic/user"
-	"Luckify/app/usercenter/cmd/api/internal/svc"
-	"Luckify/app/usercenter/cmd/api/internal/types"
-	"github.com/zeromicro/go-zero/rest/httpx"
-)
-
-// 微信登录注册
-func WxMiniAuthHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
-	return func(w http.ResponseWriter, r *http.Request) {
-		var req types.WXMiniAuthReq
-		if err := httpx.Parse(r, &req); err != nil {
-			response.ParamErrorResult(r, w, err)
-			return
-		}
-
-		err := validator.New().StructCtx(r.Context(), req)
-		if err != nil {
-			response.ParamErrorResult(r, w, err)
-			return
-		}
-
-		l := user.NewWxMiniAuthLogic(r.Context(), svcCtx)
-		resp, err := l.WxMiniAuth(&req)
-		response.HttpResult(r, w, resp, err)
-	}
-}
